# bacc

./: .gitignore  .gitmodules  LICENSE  README.md  infrastructure.bicep
.github/: ci.cmake
.github/ci/: configure-azfinsim-linux.cmake  configure-azfinsim-windows.cmake  configure-minimal.cmake  configure-secured-batch.cmake  configure-vizer.cmake  ctest.cmake
.github/workflows/: az-deploy-matrix.yaml  az-deploy-n-test-hub-n-spoke.yaml  az-deploy-n-test.yaml  az-deploy-secured-batch.yaml  az-deploy-test.yaml  az-deploy.yaml  ci-cli.yaml  ci-deploy-n-test.yaml  ci-startup-script.yaml  ci-validate.yaml  cli.yaml  deploy-bicep.yaml  deploy-callable.yaml  validate.yaml
cli/: README.md  pyproject.toml
cli/src/az_sbatch/: __main__.py  azfinsim.py  commands.py  mpi_bm.py  tools_json.py  utils.py
cli/src/bacc/: __main__.py  azfinsim.py  commands.py  mpi_bm.py  tools_json.py  utils.py
config/: batch.json  batch.jsonc  config.template.jsonc  diagnostics.json  hub.json  hub.jsonc  images.jsonc  nsgRules.jsonc  spoke.json  spoke.jsonc  spoke.schema.json  storage.jsonc
demos/azfinsim/: README.md
docs/: aac-draft.md  cli.md  design.md  examples.md  index.md  testing.md  understanding-azfinsim.md
docs/images/: azfinsim-linux.vsdx
docs/tutorials/: azfinsim-in-secured-batch.md  azfinsim-linux.md  azfinsim-on-windows.md  azfinsim-windows.md  azfinsim.md  environment-setup.md  mpi-benchmarks-rhel.md  vizer.md
examples/: README.md
examples/azfinsim-linux/: batch.jsonc  config.jsonc  deployment.bicep  spoke.jsonc  storage.jsonc
examples/azfinsim-win/: storage.jsonc
examples/azfinsim-windows/: batch.jsonc  config.jsonc  deployment.bicep  spoke.jsonc  start_task.ps1
examples/config0/: batch.jsonc  spoke.jsonc  storage.jsonc
examples/config1/: batch.jsonc  spoke.jsonc  start_task.ps1
examples/mpi-benchmarks/: config.jsonc  deployment.bicep  (+1 more)
modules/: batch.bicep  builtinRoles.json  containerImages.bicep  diagnostics.bicep  diagnostics.json  endpoints.bicep  hub_network.bicep  images.jsonc  infrastructure.bicep  mountConfigurations.bicep  nsgRules.bicep  nsgRules.jsonc  peering.bicep  populateKeys.bicep  privateEndpoint.bicep  roleAssignments.bicep  roles.bicep  spoke.bicep  startTasks.bicep  storage.bicep  storageAccount.bicep  vnetLinks.bicep
schemas/: batch.schema.json  config.schema.json  hub.schema.json  images.schema.json  spoke.schema.json  storage.schema.json
templates/: azfinsim-linux_deploy.json  azfinsim-windows_deploy.json  mpi-benchmarks_deploy.json  readme.md  secured-batch_deploy.json  vizer_deploy.json
tests/: CMakeLists.txt  CTestConfig.cmake  await_downsize.sh  await_resize.sh  linux_pool.test  verify_pools.test  windows_pool.test
tests/cmake/: acr_import.cmake  azfinsim_tests.cmake  jumpbox_script.sh.in  secured_batch_tests.cmake  utils.cmake  validation_tests.cmake  variables.cmake
tutorials/: azfinsim-on-windows.md  secured-deployment.md
(+11 files in other folders)
