[tool.poetry]
name = "bacc"
version = "0.1.0"
description = ""
authors = ["Utkarsh Ayachit <uayachit@microsoft.com>"]
packages = [{include = "bacc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
azure-common = "^1.1.28"
azure-batch = "^13.0.0"
azure-identity = "^1.12.0"
knack = "^0.10.1"
azure-mgmt-resource = "^23.0.0"
pyjson5 = "^1.6.2"

[tool.poetry.scripts]
bacc = {reference = "bin/bacc", type = "file"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
